--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
             {"Region":"오세아니아","Country":"오스트레일리아","Category":"자원","Fact":"자원 부국, 석탄·철광석·보크사이트 등이 풍부하여 광업 발달"},
             {"Region":"오세아니아","Country":"오스트레일리아","Category":"농업","Fact":"기업적 농목업(찬정) → 양모, 유제품, 소고기 수출"},
             {"Region":"오세아니아","Country":"오스트레일리아","Category":"원주민","Fact":"애버리지니와 유럽계 갈등"},
-            {"Region":"오세아니아","Country":"말레이시아","Category":"자연환경","Fact":"말라카 해협 국제 해상 요충지"},
-            {"Region":"오세아니아","Country":"말레이시아","Category":"산업·경제","Fact":"석유 및 천연가스, 주석, 팜유 등 수출"},
-            {"Region":"오세아니아","Country":"말레이시아","Category":"사회·문화","Fact":"이슬람교 비율이 가장 높음. 그 다음 불교"},
-            {"Region":"오세아니아","Country":"싱가포르","Category":"특징","Fact":"1인당 GDP 아시아 1위, 도시 국가, 교통·무역 요충지(인도양과 태평양 사이)"},
+            {"Region":"몬순아시아","Country":"말레이시아","Category":"자연환경","Fact":"말라카 해협 국제 해상 요충지"},
+            {"Region":"몬순아시아","Country":"말레이시아","Category":"산업·경제","Fact":"석유 및 천연가스, 주석, 팜유 등 수출"},
+            {"Region":"몬순아시아","Country":"말레이시아","Category":"사회·문화","Fact":"이슬람교 비율이 가장 높음. 그 다음 불교"},
+            {"Region":"몬순아시아","Country":"싱가포르","Category":"특징","Fact":"1인당 GDP 아시아 1위, 도시 국가, 교통·무역 요충지(인도양과 태평양 사이)"},
             {"Region":"오세아니아","Country":"뉴질랜드","Category":"자연환경","Fact":"북섬(주로 화산지형), 남섬(빙하 지형), 국토 전체가 서안해양성 기후"},
             {"Region":"오세아니아","Country":"뉴질랜드","Category":"갈등","Fact":"마오리족과 유럽계 갈등 발생, 공존 노력(마오리어 공용어 지정)"},
             {"Region":"건조아시아와 북부아프리카","Country":"튀르키예","Category":"자연환경","Fact":"아나톨리아 고원(신기 조산대), 파묵칼레(카르스트 지형)"},
@@ -264,7 +264,7 @@
             {"Region":"건조아시아와 북부아프리카","Country":"아랍에미리트","Category":"산업·경제","Fact":"석유·천연가스"},
             {"Region":"건조아시아와 북부아프리카","Country":"아랍에미리트","Category":"사회·문화","Fact":"외국인 노동자 대규모 유입(청장년층에서 남초 현상 발생)"},
             {"Region":"건조아시아와 북부아프리카","Country":"아랍에미리트","Category":"국제관계","Fact":"걸프 협력 회의(GCC) 회원국"},
-            {"Region":"건조아시아와 ","Country":"카타르","Category":"산업·경제","Fact":"천연가스 대국, 고소득국"},
+            {"Region":"건조아시아와 북부아프리카","Country":"카타르","Category":"산업·경제","Fact":"천연가스 대국, 고소득국"},
             {"Region":"건조아시아와 북부아프리카","Country":"카타르","Category":"사회·문화","Fact":"2022년 FIFA 월드컵 개최(겨울 개최)"},
             {"Region":"건조아시아와 북부아프리카","Country":"카타르","Category":"국제관계","Fact":"걸프 협력 회의(GCC) 회원국"},
             {"Region":"건조아시아와 북부아프리카","Country":"카자흐스탄","Category":"자연환경","Fact":"초원·스텝 기후, 아랄해 연안(사막화 문제)"},
