--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>세계 지리 마스터 퀴즈</title>
+    <title>세계 지리 수행평가 퀴즈</title>
     <style>
         body {
             font-family: Arial, sans-serif;
