--- a/geo.html
+++ b/geo.html
@@ -158,10 +158,11 @@
 <body>
     <div class="container">
         <div id="home-screen" class="screen home-screen active">
-            <h1>세계 지리 마스터</h1>
+            <h1>세계 지리 수행평가 퀴즈</h1>
             <p>원하는 게임 모드를 선택하세요.</p>
             <button onclick="startGame('fact_to_country')">1. 특성 → 국가</button>
             <button onclick="startGame('country_to_fact')">2. 국가 → 특성</button>
+            <a href="https://www.seterra.com" target="_blank">국가 맞추기 게임하기</a>
         </div>
 
         <div id="quiz-screen" class="screen quiz-section">
@@ -178,6 +179,7 @@
             <div id="explanation-box" class="explanation" style="display:none;"></div>
             <div class="navigation-buttons">
                 <button id="next-button" onclick="loadNewQuestion()" disabled>다음 문제</button>
+                <a href="https://www.seterra.com" target="_blank">국가 맞추기 게임하기</a>
             </div>
         </div>
         
@@ -195,6 +197,7 @@
             <div class="navigation-buttons">
                 <button onclick="endGame()">메뉴로 돌아가기</button>
             </div>
+            <a href="https://www.seterra.com" target="_blank">국가 맞추기 게임하기</a>
         </div>
     </div>
 
