--- a/geo.html
+++ b/geo.html
@@ -1,6 +1,5 @@
+<!-- https://ppli3847.github.io/learnetc/-->
 <!DOCTYPE html>
-
-<!-- https://ppli3847.github.io/learnetc/ -->
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
@@ -27,7 +26,7 @@
             width: 100%;
             max-width: 600px;
             text-align: center;
-            position: relative; /* 자식 요소의 절대 위치 기준이 됨 */
+            position: relative;
         }
         h1 {
             color: #4CAF50;
@@ -143,7 +142,6 @@
             padding: 8px 16px;
             font-size: 0.9em;
         }
-        /* 종료 버튼 스타일 */
         #end-quiz-btn {
             position: absolute;
             top: 20px;
@@ -204,7 +202,7 @@
         // CSV 데이터 원본을 JavaScript 배열로 변환
         const geographyData = [
             {"Region":"몬순아시아","Country":"중국","Category":"자연환경","Fact":"서고동저 지형, 주요 하천(창장강·황허강)"},
-            {"Region":"몬순아시아","Country":"중국","Category":"산업·경제","Fact":"'세계의 공장', 제철·자동차 세계 1위, 첨단 산업 단지(중관춘, 푸동), 농업(세계 1위 밀·쌀 생산국)"},
+            {"Region":"몬순아시아","Country":"중국","Category":"산업·경제","Fact":"'세계의 공장', 제철·자동차 세계 1위, 첨단 산업 단지(중관춘, 푸둥), 농업(세계 1위 밀·쌀 생산국)"},
             {"Region":"몬순아시아","Country":"중국","Category":"전통 생활","Fact":"가옥(사합원), 의복(치파오), 소수 민족(위구르족·티베트족)"},
             {"Region":"몬순아시아","Country":"중국","Category":"갈등","Fact":"소수민족 분리 독립 갈등, 센카쿠·난사 군도 분쟁"},
             {"Region":"몬순아시아","Country":"미얀마","Category":"특징","Fact":"불교 국가"},
@@ -215,7 +213,7 @@
             {"Region":"몬순아시아","Country":"일본","Category":"사회·문화","Fact":"합장가옥(갓쇼), 전통의복(기모노)"},
             {"Region":"몬순아시아","Country":"일본","Category":"갈등","Fact":"쿠릴열도, 센카쿠열도 분쟁"},
             {"Region":"몬순아시아","Country":"몽골","Category":"자연환경","Fact":"국토의 대부분이 건조 기후"},
-            {"Region":"몬순아시아","Country":"몽골","Category":"전통 생활","Fact":"전통 가옥(게르), 유목 생활, 허르헉(양고기 요리)"},
+            {"Region":"몬순아시아","Country":"몽골","Category":"전통 생활","Fact":"전통 가옥(게르), 유목 생활, 허르헝(양고기 요리)"},
             {"Region":"몬순아시아","Country":"필리핀","Category":"자연환경","Fact":"환태평양 조산대(지진·화산 활발)"},
             {"Region":"몬순아시아","Country":"필리핀","Category":"사회·문화","Fact":"스페인 식민지 영향으로 크리스트교 신자 다수"},
             {"Region":"몬순아시아","Country":"필리핀","Category":"갈등","Fact":"모로족 분리 독립 운동(민다나오섬, 이슬람교)"},
@@ -226,9 +224,9 @@
             {"Region":"몬순아시아","Country":"베트남","Category":"사회·문화","Fact":"전통 음식(퍼: 쌀국수, 반미), 전통 의복(아오자이)"},
             {"Region":"몬순아시아","Country":"베트남","Category":"갈등","Fact":"남중국해 영유권 갈등"},
             {"Region":"몬순아시아","Country":"타이(태국)","Category":"자연환경","Fact":"짜오프라야강 유역, 메콩강 접경"},
-            {"Region":"몬순아시아","Country":"타이(태국)","Category":"농업·자원","Fact":"벼농사 중심, 풍작 기원 문화(송끄란 축제)"},
+            {"Region":"몬순아시아","Country":"타이(태국)","Category":"농업·자원","Fact":"벼농사 중심, 쌀작 기원 문화(송크란 축제)"},
             {"Region":"몬순아시아","Country":"타이(태국)","Category":"산업·경제","Fact":"관광산업 발달"},
-            {"Region":"몬순아시아","Country":"타이(태국)","Category":"사회·문화","Fact":"전통 음식(카오팟, 팟타이, 똠얌꿍), 불교 신자 다수"},
+            {"Region":"몬순아시아","Country":"타이(태국)","Category":"사회·문화","Fact":"전통 음식(카오팟, 팟타이, 톰 얌꿍), 불교 신자 다수"},
             {"Region":"몬순아시아","Country":"인도네시아","Category":"인구특징","Fact":"세계 인구 4위, 세계 최대 이슬람 인구"},
             {"Region":"몬순아시아","Country":"인도네시아","Category":"자연환경","Fact":"신기 조산대(지진, 화산 활발), 계단식 논 발달"},
             {"Region":"몬순아시아","Country":"인도네시아","Category":"농업·자원","Fact":"세계 커피 3위 생산국, 플랜테이션 농업 발달(팜유, 천연고무)"},
@@ -236,7 +234,7 @@
             {"Region":"몬순아시아","Country":"인도네시아","Category":"사회·문화","Fact":"전통 음식(나시고렝), 전통 가옥(루마 아닷: 고상가옥), 동남아시아 국가 연합(ASEAN)의 본부 위치"},
             {"Region":"몬순아시아","Country":"인도","Category":"자연환경","Fact":"히말라야 산맥, 데칸고원, 갠지스강 유역 충적평야(벼농사)"},
             {"Region":"몬순아시아","Country":"인도","Category":"농업","Fact":"여름 몬순으로 벼농사 발달, 데칸고원(목화), 북동부(다르질링 지역 차 생산)"},
-            {"Region":"몬순아시아","Country":"인도","Category":"산업·경제","Fact":"뭄바이(영화산업: 발리우드), 첨단 산업(뱅갈루루 '인도의 실리콘밸리')"},
+            {"Region":"몬순아시아","Country":"인도","Category":"산업·경제","Fact":"뭄바이(영화산업: 발리우드), 첨단 산업(방갈로르 '인도의 실리콘밸리')"},
             {"Region":"몬순아시아","Country":"인도","Category":"사회·문화","Fact":"힌두교 중심, 전통의복(사리와 도티)"},
             {"Region":"몬순아시아","Country":"인도","Category":"갈등","Fact":"카슈미르 분쟁(vs 파키스탄)"},
             {"Region":"몬순아시아","Country":"네팔","Category":"특징","Fact":"인도와 함께 힌두교 국가"},
@@ -245,7 +243,7 @@
             {"Region":"몬순아시아","Country":"스리랑카","Category":"자연환경","Fact":"인도양 섬나라, 차 플랜테이션(실론 차)"},
             {"Region":"몬순아시아","Country":"스리랑카","Category":"갈등","Fact":"신할리즈족(불교) vs 타밀족(힌두교)"},
             {"Region":"오세아니아","Country":"오스트레일리아","Category":"자원","Fact":"자원 부국, 석탄·철광석·보크사이트 등이 풍부하여 광업 발달"},
-            {"Region":"오세아니아","Country":"오스트레일리아","Category":"농업","Fact":"기업적 농목업(찬정) → 양모, 유제품, 소고기 수출"},
+            {"Region":"오세아니아","Country":"오스트레일리아","Category":"농업","Fact":"기업적 농목업(스테이션) → 양모, 유제품, 소고기 수출"},
             {"Region":"오세아니아","Country":"오스트레일리아","Category":"원주민","Fact":"애버리지니와 유럽계 갈등"},
             {"Region":"몬순아시아","Country":"말레이시아","Category":"자연환경","Fact":"말라카 해협 국제 해상 요충지"},
             {"Region":"몬순아시아","Country":"말레이시아","Category":"산업·경제","Fact":"석유 및 천연가스, 주석, 팜유 등 수출"},
@@ -275,13 +273,13 @@
             {"Region":"건조아시아와 북부아프리카","Country":"사우디아라비아","Category":"산업·경제","Fact":"세계 최대 산유국, '비전 2030' 신도시(네옴), 대추야자 재배"},
             {"Region":"건조아시아와 북부아프리카","Country":"사우디아라비아","Category":"사회·문화","Fact":"이슬람 성지 메카·메디나"},
             {"Region":"건조아시아와 북부아프리카","Country":"사우디아라비아","Category":"국제관계","Fact":"걸프 협력 회의(GCC) 회원국"},
-            {"Region":"건조아시아와 북부아프리카","Country":"사우디아라비아","Category":"자연환경","Fact":"사막 기후, 두바이 아부다비 도시 발달"},
+            {"Region":"건조아시아와 북부아프리카","Country":"아랍에미리트","Category":"자연환경","Fact":"사막 기후, 두바이 아부다비 도시 발달"},
             {"Region":"건조아시아와 북부아프리카","Country":"리비아","Category":"자연환경","Fact":"사하라 사막"},
             {"Region":"건조아시아와 북부아프리카","Country":"리비아","Category":"산업·경제","Fact":"석유 자원 풍부"},
             {"Region":"건조아시아와 북부아프리카","Country":"아랍에미리트","Category":"산업·경제","Fact":"석유·천연가스"},
             {"Region":"건조아시아와 북부아프리카","Country":"아랍에미리트","Category":"사회·문화","Fact":"외국인 노동자 대규모 유입(청장년층에서 남초 현상 발생)"},
             {"Region":"건조아시아와 북부아프리카","Country":"아랍에미리트","Category":"국제관계","Fact":"걸프 협력 회의(GCC) 회원국"},
-            {"Region":"건조아시아와 ","Country":"카타르","Category":"산업·경제","Fact":"천연가스 대국, 고소득국"},
+            {"Region":"건조아시아와 북부아프리카","Country":"카타르","Category":"산업·경제","Fact":"천연가스 대국, 고소득국"},
             {"Region":"건조아시아와 북부아프리카","Country":"카타르","Category":"사회·문화","Fact":"2022년 FIFA 월드컵 개최(겨울 개최)"},
             {"Region":"건조아시아와 북부아프리카","Country":"카타르","Category":"국제관계","Fact":"걸프 협력 회의(GCC) 회원국"},
             {"Region":"건조아시아와 북부아프리카","Country":"카자흐스탄","Category":"자연환경","Fact":"초원·스텝 기후, 아랄해 연안(사막화 문제)"},
@@ -290,7 +288,7 @@
             {"Region":"건조아시아와 북부아프리카","Country":"말리, 니제르, 에티오피아","Category":"특징","Fact":"사헬 지대(사막화 문제 심각)"},
             {"Region":"건조아시아와 북부아프리카","Country":"우즈베키스탄","Category":"특징","Fact":"아랄해 연안: 사막화 문제"},
             {"Region":"건조아시아와 북부아프리카","Country":"이스라엘","Category":"특징","Fact":"크리스트교·유대교·이슬람교 성지 공존"},
-            {"Region":"유럽과 북부 아메리카","Country":"영국","Category":"역사","Fact":"산업혁명 발상지"},
+            {"Region":"유럽과 북부 아메리카","Country":"영국","Category":"역사","Fact":"산업혁명 발생지"},
             {"Region":"유럽과 북부 아메리카","Country":"영국","Category":"자연환경","Fact":"서안해양성 기후, 혼합농업, 목축업 및 낙농업 발달"},
             {"Region":"유럽과 북부 아메리카","Country":"영국","Category":"산업지역","Fact":"요크셔·랭커셔(전통 공업 지역, 쇠퇴), 뉴캐슬·미들즈브러(임해 공업), 케임브리지 사이언스 파크(첨단 산업)"},
             {"Region":"유럽과 북부 아메리카","Country":"영국","Category":"도시","Fact":"런던(최상위 계층 세계도시)"},
@@ -298,16 +296,16 @@
             {"Region":"유럽과 북부 아메리카","Country":"미국","Category":"전통 공업","Fact":"러스트 벨트 - 뉴잉글랜드(경공업), 중부 대서양 연안(기계·제철), 오대호 연안(자동차·제철)"},
             {"Region":"유럽과 북부 아메리카","Country":"미국","Category":"신흥 공업","Fact":"선벨트 - 멕시코만 연안 공업 지역, 태평양 연안 공업 지역"},
             {"Region":"유럽과 북부 아메리카","Country":"미국","Category":"주요 도시","Fact":"뉴욕(UN 본부, 최상위 계층 세계도시), 시카고(철도·수운 교통, 고층 스카이라인), 디트로이트(자동차 산업 쇠퇴), 휴스턴(석유 화학·우주항공), 로스앤젤레스(할리우드 영화), 시애틀(보잉 항공기, 스타벅스 본사)"},
-            {"Region":"유럽과 북부 아메리카","Country":"프랑스","Category":"산업지역","Fact":"로렌(철강 공업, 쇠퇴), 르아브르·됭케르크(임해 공업), 소피아 앙티폴리스(첨단 산업)"},
+            {"Region":"유럽과 북부 아메리카","Country":"프랑스","Category":"산업지역","Fact":"로렌(철강 공업, 쇠퇴), 르아브르·뒨케르크(임해 공업), 소피아 앙티폴리스(첨단 산업)"},
             {"Region":"유럽과 북부 아메리카","Country":"프랑스","Category":"도시","Fact":"파리: 라데팡스 업무지구"},
             {"Region":"유럽과 북부 아메리카","Country":"멕시코","Category":"산업·경제","Fact":"마킬라도라(미국 국경지대 조립가공업, NAFTA 이후 성장)"},
-            {"Region":"유럽과 북부 아메리카","Country":"독일","Category":"산업지역","Fact":"루르·자르·작센(전통 공업, 쇠퇴·재생 노력), 라인·쉬네(임해 공업 지역), 라인강"},
+            {"Region":"유럽과 북부 아메리카","Country":"독일","Category":"산업지역","Fact":"루르·자르·작센(전통 공업, 쇠퇴·재생 노력), 라인·슈네(임해 공업 지역), 라인강"},
             {"Region":"유럽과 북부 아메리카","Country":"캐나다","Category":"사회·문화","Fact":"퀘벡주 프랑스어 사용, 분리 독립 요구"},
             {"Region":"유럽과 북부 아메리카","Country":"캐나다","Category":"경제","Fact":"USMCA(미·멕·캐 협정) 참여, 자원 부국"},
             {"Region":"유럽과 북부 아메리카","Country":"이탈리아","Category":"산업","Fact":"제3 이탈리아(섬유·의류·가죽, 중소기업 협동조합), 남북 경제 격차 큼"},
             {"Region":"유럽과 북부 아메리카","Country":"이탈리아","Category":"갈등","Fact":"파다니아(이탈리아 북부) 분리 독립 운동"},
-            {"Region":"유럽과 북부 아메리카","Country":"스페인(에스파냐)","Category":"산업","Fact":"빌바오 철강 산업(전통 공업, 쇠퇴)"},
-            {"Region":"유럽과 북부 아메리카","Country":"스페인(에스파냐)","Category":"갈등","Fact":"카탈루냐 분리 독립(바르셀로나 중심), 바스크 분리 운동"},
+            {"Region":"유럽과 북부 아메리카","Country":"스페인","Category":"산업","Fact":"빌바오 철강 산업(전통 공업, 쇠퇴)"},
+            {"Region":"유럽과 북부 아메리카","Country":"스페인","Category":"갈등","Fact":"카탈루냐 분리 독립(바르셀로나 중심), 바스크 분리 운동"},
             {"Region":"유럽과 북부 아메리카","Country":"벨기에","Category":"특징","Fact":"EU 본부(브뤼셀) 소재"},
             {"Region":"유럽과 북부 아메리카","Country":"스웨덴","Category":"특징","Fact":"시스타 사이언스 시티(스톡홀름, ICT 중심 첨단 산업 클러스터)"},
             {"Region":"유럽과 북부 아메리카","Country":"핀란드","Category":"특징","Fact":"오울루(과거 제지·연어 무역항 ICT 클러스터, 노키아 중심, 산학 협력)"},
