--- a/geography/geo_index.html
+++ b/geography/geo_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>세계 지리 수행평가 퀴즈</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="geo_style.css">
 </head>
 <body>
     <div class="container">
