--- a/geography/geo_index.html
+++ b/geography/geo_index.html
@@ -38,6 +38,6 @@
             <button id="review-button" onclick="showReview()">오답 노트</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="geo_script.js"></script>
 </body>
 </html>
