--- a/english/eng_index.html
+++ b/english/eng_index.html
@@ -26,6 +26,7 @@
                 <button class="eng_mode-button button" data-mode="version3">
                     단어 배열하기<br>(단어 순서 배열)
                 </button>
+                <p><br>모바일은 가로가 나을 듯</br></p>
             </div>
         </main>
 
