--- a/geography/geo_index.html
+++ b/geography/geo_index.html
@@ -13,7 +13,7 @@
             <p>원하는 게임 모드를 선택하세요!</p>
             <button onclick="startGame('fact_to_country')">특성 -> 국가</button>
             <button onclick="startGame('country_to_fact')">국가 -> 특성</button>
-            <p><br>백지도 연습 원하면 <a href="https://www.seterra.com/quiz/seterra">Seterra</a>가 매우 좋습니당</br></p>
+            <p><br>백지도 연습 원하면 <a href="https://www.seterra.com">Seterra</a>가 매우 좋습니당</br></p>
 
         </div>
 
