index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p class="subtitle">학교 공부를 도와주는 학습 도구들을 모아놓았습니다.<br>원하는 과목을 선택해서 시작해보세요!</p>
         
         <div class="subject-grid">
-            <a href="./geography/geo_index/html" class="subject-card geography">
+            <a href="./geography/geo_index.html" class="subject-card geography">
                 <div class="subject-icon">🌍</div>
                 <div class="subject-title">세계 지리</div>
                 <div class="subject-description">국가별 특성과 지리 정보를<br>퀴즈로 학습해보세요</div>
