--- a/geography/geo_index.html
+++ b/geography/geo_index.html
@@ -29,7 +29,7 @@
             <ul id="options-list" class="options"></ul>
             <div id="feedback" class="feedback" style="display:none;"></div>
             <div id="explanation-box" class="explanation" style="display:none;"></div>
-            </div>
+        </div>
         
         <div id="end-screen" class="screen">
             <h1>게임 종료</h1>
@@ -37,6 +37,15 @@
             <button onclick="restartGame()">다시 시작</button>
             <button id="review-button" onclick="showReview()">오답 노트</button>
         </div>
+
+        <div id="modal-overlay" class="modal-overlay" style="display:none;">
+            <div id="modal-content" class="modal-content">
+                <h3 id="modal-title">틀렸습니다</h3>
+                <div id="modal-explanation" class="modal-explanation"></div>
+                <button id="modal-confirm-btn" class="modal-confirm-btn">확인</button>
+            </div>
+        </div>
+
     </div>
     <script src="geo_script.js"></script>
 </body>
